[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clickzetta-langchain-examples"
version = "1.0.0"
description = "Enterprise AI application examples based on ClickZetta and LangChain"
authors = [
    {name = "ClickZetta Team", email = "support@yunqi.tech"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11.0"
keywords = ["clickzetta", "langchain", "ai", "vector-database", "llm", "dashscope"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "streamlit>=1.33.0",
    "langchain>=0.1.19",
    "langchain-community>=0.0.38",
    "langchain-clickzetta>=0.1.4",
    "dashscope>=1.14.0",
    "pypdf>=4.2.0",
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "python-dotenv>=1.0.0",
    "validators>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yunqiqiliang/clickzetta-langchain-examples"
Documentation = "https://github.com/yunqiqiliang/clickzetta-langchain-examples/blob/main/README.md"
Repository = "https://github.com/yunqiqiliang/clickzetta-langchain-examples"
Issues = "https://github.com/yunqiqiliang/clickzetta-langchain-examples/issues"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true